+ Rest controller'da mediaList için Container sınıfı eklendi. + KategoriID ile Media arama sorgusu düzeltildi. + SiteUser'daki Medialist için Cascade Persist kaldırıldı.(Sadece Media'daki bırakıldı.) + twitterImages.xhtml 'daki rowKey değiştirildi. Trendler DB'ye kaydedilmeden önce dinamik olarak DataTable'a aktarıldığı için bu safhada trendImages ID'si olmadığı için.

--- a/PhotoService-web/src/main/webapp/secure/media/mediaActions.xhtml
+++ b/PhotoService-web/src/main/webapp/secure/media/mediaActions.xhtml
@@ -105,7 +105,7 @@
                     <f:param name="imageID" value="#{media.id}"/>
                 </p:graphicImage>
             </p:column>
-            <p:column headerText="Kullanıcı Adı">userName</p:column>
+            <p:column headerText="Kullanıcı Adı">#{media.siteUser.userName}</p:column>
                     
             <f:facet name="header">
                 <p:commandButton process="fileList" update=":insertForm:multiMediaDetail" icon="ui-icon-extlink" value="Göster" oncomplete="PF('multiMediaDialog').show()" /> 
