--- a/PhotoService-web/src/main/webapp/secure/photoCategory/photoCategoryActions.xhtml
+++ b/PhotoService-web/src/main/webapp/secure/photoCategory/photoCategoryActions.xhtml
@@ -39,7 +39,7 @@
                         <p:outputLabel id="orderLabel" for="orderInput" value="Menu Sırası"/>
                     </div>
                     <div class="formInput width50"> 
-                        <p:inputText value="#{categoryManagedBean.photoCategory.categoryRate}" placeholder="Menü Sırası Giriniz" id="orderInput"/>
+                        <p:inputText value="#{categoryManagedBean.photoCategory.categoryOrder}" placeholder="Menü Sırası Giriniz" id="orderInput"/>
                     </div>
                 </div>
                 <div class="formRowBasic width90">
