Eklenenler: + Twitter'dan gelen imaj sadece Media içinde byteArray olarak tutuluyor TrendImages byteArray set etme kaldırıldı. + Rest'e  tüm media listesi ve SOURCE tipine göre media listesi döndürme metodları eklendi. + Twitter sonuçları için rowKey = tweetID'ye göre ayarlanarak, tweetlerin eksik kayıt sorunu çözüldü.
Eksikler:
- /rest/  media listesi döndürürken sadece ilk media'nın bir kısmı dönüyor. Alınan hata : 
.XMLMarshalException Exception Description: A cycle is detected in the object graph. This will cause an infinite loop. (Media - TrendImages)

--- a/PhotoService-web/src/main/webapp/secure/media/twitterImages.xhtml
+++ b/PhotoService-web/src/main/webapp/secure/media/twitterImages.xhtml
@@ -14,11 +14,12 @@
         <h:form id="insertForm" enctype="multipart/form-data">
         <p:dataTable resizableColumns="true" id="fileList" var="trendImage" 
                      value="#{twitterManagedBean.trendImagesListFiltered}"
-                     rowKey="#{trendImage.trendImages.trendName}"
+                     rowKey="#{trendImage.trendImages.tweetID}"
                      selection="#{twitterManagedBean.selectedTrendImagesList}">
            
             
             <p:column selectionMode="multiple" style="width: 3%;text-align: center;"></p:column>
+            <p:column headerText="ID" width="60">#{trendImage.trendImages.tweetID}</p:column>
             <p:column headerText="Favori" width="60">#{trendImage.trendImages.favorite_count}</p:column>
             <p:column headerText="Retweet" width="60">#{trendImage.trendImages.retweet_count}</p:column>
             <p:column headerText="İmaj" width="60"  style="text-align: center" >
