--- a/PhotoService-web/src/main/webapp/secure/photoCategory/photoCategoryActions.xhtml
+++ b/PhotoService-web/src/main/webapp/secure/photoCategory/photoCategoryActions.xhtml
@@ -28,7 +28,7 @@
                 </div>   
                 <div class="formRowBasic width70">
                     <div class="formLabel width40">  
-                        <p:outputLabel id="rateLabel" for="rateInput" value="Öndem Sırası"/>
+                        <p:outputLabel id="rateLabel" for="rateInput" value="Önem Sırası"/>
                     </div>
                     <div class="formInput width50"> 
                         <p:inputText value="#{categoryManagedBean.photoCategory.categoryRate}" placeholder="Önem Sırası Giriniz" id="rateInput"/>
@@ -36,7 +36,7 @@
                 </div>
                 <div class="formRowBasic width70">   
                     <div class="formLabel width40">  
-                        <p:outputLabel id="orderLabel" for="orderInput" value="Menu Sırası"/>
+                        <p:outputLabel id="orderLabel" for="orderInput" value="Menü Sırası"/>
                     </div>
                     <div class="formInput width50"> 
                         <p:inputText value="#{categoryManagedBean.photoCategory.categoryOrder}" placeholder="Menü Sırası Giriniz" id="orderInput"/>
